--- a/requirements-dev.txt
+++ b/requirements-dev.txt
@@ -2,6 +2,8 @@ Flask==1.1.2
 pymongo[tls,srv]==3.11.2
 python-dotenv==0.15.0
 Flask-Cors==3.0.10
+flask-restplus==0.13.0
+Werkzeug==0.16.1
 
 # OpenVINO development package
 openvino-dev[tensorflow2]==2021.4.0
